# nanoMoD

./: .gitignore  .pdm-python  LICENSE  README.md  main.ipynb  pyproject.toml  search_profile.py  simple_train.py  sweep_search.yaml  train.py
config/: config.yaml  config_search.yaml  config_train.yaml  train_gpt2.py
config/data/: default.yaml  distil.yaml
config/dnas/: default.yaml  distil.yaml
config/model/: baseline.yaml  learnable_mod.yaml
config/train/: normal.yaml
config/train/dnas/: default.yaml  distil.yaml
data/shake/: prepare_shakespeare.py
src/nanomod/: configuration.py  dataset.py  model.py  utils.py
