[project]
name = "nanoMoD"
version = "0.1.0"
description = "Minimal implementation of mixture-of-depths on nanoGPT"
authors = [
    {name = "Eduardo Pacheco", email = "pacheco.eduardo.silva@gmail.com"},
]
dependencies = [
    "transformers>=4.40.1",
    "wandb>=0.16.6",
    "tiktoken>=0.6.0",
    "tqdm>=4.66.4",
    "PyYAML>=6.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
